--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,7 +101,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
-            android:text="Stop"
+            android:text="Ser"
             android:backgroundTint="@color/blue"
             android:id="@+id/StopService"/>
 
@@ -121,6 +121,6 @@
         android:layout_gravity="center"
         android:layout_margin="4dp"
         android:backgroundTint="@color/blue"
-        android:text="@string/sends" />
+        android:text="Bluetooth" />
 
 </LinearLayout>
