--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,15 @@
         android:layout_margin="10dp"
         android:id="@+id/datev"
         android:gravity="start"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Truck: "
+        android:textColor="@color/blue"
+        android:textSize="24sp"
+        android:layout_margin="10dp"
+        android:id="@+id/carSelected"
+        android:gravity="start"/>
 
     <LinearLayout
         android:layout_width="match_parent"
